k3s/scanopy/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scanopy-ingress
  namespace: utilities
spec:
  rules:
    - host: scanopy.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scanopy-server
                port:
                  number: 60072
